language/move-lang/tests/move_check/parser/struct_type_missing_angle.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_type_missing_angle.move:3:21
  │
3 │     struct S<T1, T2 { }
  │             -       ^ Expected '>'
  │             │        
  │             To match this '<'

